--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "benchmark": "^2.1.4"
   }
 }
